# expr

./: .gitignore  CMakeLists.txt  expr.cpp  expr.hpp
computation/: calculator.hpp
include/: token_manager.hpp
include/computation/: calculator.hpp
include/history/: history.hpp
include/memory/: memory.hpp
include/menu/: facade.hpp
include/parsing/: context.hpp  parser.hpp  states.hpp
include/sorting/: command_manager.hpp  commands.hpp
include/tokenization/: state_factory.hpp  states.hpp  tokens.hpp
include/translating/: commands.hpp
parsing/: extended_tokens.hpp  state_factory.hpp
sorting/: command_manager.cpp  commands.cpp  context.cpp  context.hpp  sorter.hpp
source/: token_manager.cpp
source/computation/: calculator.cpp
source/history/: history.cpp
source/memory/: memory.cpp
source/menu/: facade.cpp
source/parsing/: context.cpp  extended_tokens.cpp  parser.cpp  states.cpp
source/sorting/: sorter.cpp
source/tokenization/: tokens.cpp
source/translating/: commands.cpp  translator.cpp
tokenization/: context.cpp  context.hpp  state_factory.cpp  states.cpp  tokenizer.cpp  tokenizer.hpp
translating/: command_manager.cpp  command_manager.hpp  translator.hpp
utils/: token.hpp
